<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/accueil"
            android:icon="@drawable/ic_home"
            android:title="@string/Accueil" />
        <item
            android:id="@+id/resultats"
            android:icon="@drawable/ic_search"
            android:title="@string/Mesresultats" />
        <item
            android:id="@+id/info"
            android:icon="@drawable/ic_info"
            android:title="@string/Informations" />
        <item
            android:id="@+id/centres"
            android:icon="@drawable/ic_location"
            android:title="@string/Centres" />

        <item
                android:id="@+id/actualités"
                android:icon="@drawable/ic_actualites"
                android:title="@string/Actualités" />
        <item
                android:id="@+id/compte"
                android:icon="@drawable/ic_account"
                android:title="@string/MonCompte" />
      <item
                android:id="@+id/deconnexion"
                android:icon="@drawable/ic_deconnexion"
                android:title="@string/Deconnexion" />
    </group>
        </menu>


